2010-05-19 v1.4.1
	* Fixed equality comparison (also fixes dictionary detection)
----------------------------------------
2010-04-25 v1.4.0
	* Added enum retrieval by custom property
	* Added ASP.NET MVC model binder
----------------------------------------
2010-04-16 v1.3.0
	* Added proxy support
----------------------------------------
2010-04-02 v1.2.0
	* Added support to xml serialization
	* Added switch statement like support
	* Internal changes
----------------------------------------
2010-04-01 v1.1.0
	* Some changes to ensure thread safety (thanks to Rafael Ferreira - rafaeldff [at] gmail [dot] com)
	* Serialization support
----------------------------------------
2010-03-16 v1.0.0
	* Initial version