@@ -50,7 +50,6 @@
   <ItemGroup>
     <Compile Include="Fixtures\AnotherFixture.cs" />
     <Compile Include="Frameworks\ASP.NET\MVC\Binding\EnumModelBinderTest.cs" />
-    <Compile Include="Language\SwitcherTest.cs" />
     <Compile Include="MockableTest.cs" />
     <Compile Include="XmlSerializer.cs" />
     <Compile Include="EnumTest.cs" />
